force-app/main/default/objects/Employee_Activity__c/Employee_Activity__c.object-meta.xml
<CustomObject>
    <description>Custom object to relate activities with employees</description>
    <label>Employee Activity</label>
    <nameField>
        <label>Employee Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>