force-app/main/default/objects/Employee_Activity__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <label>Activity</label>
    <referenceTo>Activity__c</referenceTo>
    <relationshipLabel>Employee Activities</relationshipLabel>
    <relationshipName>Employee_Activities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>