force-app/main/default/objects/Employee_Activity__c/fields/Actual_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Actual_Minutes__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Actual minutes that the employee took to complete the activity</description>
    <inlineHelpText>Actual minutes that the employee took to complete the activity</inlineHelpText>
    <label>Actual Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>