force-app/main/default/objects/Employee_Activity__c/fields/Employee_Training__c.field-meta.xml
<CustomField>
    <fullName>Employee_Training__c</fullName>
    <label>Employee Training</label>
    <referenceTo>Employee_Training__c</referenceTo>
    <relationshipLabel>Employee Activities</relationshipLabel>
    <relationshipName>Employee_Activities</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>