force-app/main/default/objects/Employee_Activity__c/fields/Total_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Total_Minutes__c</fullName>
    <description>Total minutes to complete this activity. Same total minutes from parent activity but needed to rollup to employee training</description>
    <label>Total Minutes</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>